fix(generator-web): increase nav z-index
Fixes a visual bug where elements with a brightness multiplier would be visible through the navigation bar.

--- a/generator/web/src/main/resources/assets/main.css
+++ b/generator/web/src/main/resources/assets/main.css
@@ -92,6 +92,7 @@ nav {
     display: flex;
     position: sticky;
     top: 0;
+    z-index: 9999;
     flex-direction: column;
     justify-content: space-between;
     background-color: var(--nav);
